<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:background="@color/gray_primary"
    tools:context=".presentation.profile.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnGoBack"
            android:layout_width="@dimen/clickable_icon_size"
            android:layout_height="@dimen/clickable_icon_size"
            android:layout_marginLeft="@dimen/layout_space_24"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/tvHelper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHelper"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvHelper"
            style="@style/Headline6Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_space_32"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMyProfile"
            style="@style/Headline4Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_space_32"
            android:layout_marginTop="@dimen/layout_space_32"
            android:layout_marginRight="@dimen/layout_space_32"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHelper" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvUser"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_marginTop="@dimen/layout_space_32"
            app:cardCornerRadius="1000dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMyProfile">

            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/edit_avatar"
                android:src="@drawable/avatar_plug" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            style="@style/Headline6Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_space_16"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvUser"
            tools:layout_editor_absoluteY="325dp"
            tools:text="Rosina Doe" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvEditProfile"
            android:layout_width="0dp"
            android:layout_height="@dimen/cv_profile_action_height"
            android:layout_marginHorizontal="@dimen/layout_space_32"
            android:layout_marginTop="@dimen/layout_space_32"
            app:cardCornerRadius="@dimen/corner_radius_20"
            app:cardElevation="@dimen/card_elevation_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <TextView
                android:id="@+id/tvEditProfile"
                style="@style/Headline6Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/layout_space_24"
                android:text="@string/edit_profile"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/layout_space_24"
                android:background="@null"
                android:contentDescription="@string/edit_profile"
                android:src="@drawable/ic_chevron_left"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvShoppingAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/cv_profile_action_height"
            android:layout_marginTop="@dimen/layout_space_24"
            app:cardCornerRadius="@dimen/corner_radius_20"
            app:cardElevation="@dimen/card_elevation_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cvEditProfile"
            app:layout_constraintRight_toRightOf="@id/cvEditProfile"
            app:layout_constraintTop_toBottomOf="@id/cvEditProfile">

            <TextView
                android:id="@+id/tvShoppingAddress"
                style="@style/Headline6Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/layout_space_24"
                android:text="@string/shopping_address"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnShoppingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/layout_space_24"
                android:background="@null"
                android:contentDescription="@string/shopping_address"
                android:src="@drawable/ic_chevron_left"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvOrderHistory"
            android:layout_width="0dp"
            android:layout_height="@dimen/cv_profile_action_height"
            android:layout_marginTop="@dimen/layout_space_24"
            app:cardCornerRadius="@dimen/corner_radius_20"
            app:cardElevation="@dimen/card_elevation_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cvEditProfile"
            app:layout_constraintRight_toRightOf="@id/cvEditProfile"
            app:layout_constraintTop_toBottomOf="@id/cvShoppingAddress"
            tools:layout_editor_absoluteY="469dp">

            <TextView
                android:id="@+id/tvOrderHistory"
                style="@style/Headline6Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="@dimen/layout_space_24"
                android:text="@string/order_history"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnOrderHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/layout_space_24"
                android:background="@null"
                android:contentDescription="@string/order_history"
                android:src="@drawable/ic_chevron_left"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvCards"
            android:layout_width="0dp"
            android:layout_height="@dimen/cv_profile_action_height"
            android:layout_marginTop="@dimen/layout_space_24"
            app:cardCornerRadius="@dimen/corner_radius_20"
            app:cardElevation="@dimen/card_elevation_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cvOrderHistory"
            app:layout_constraintRight_toRightOf="@id/cvOrderHistory"
            app:layout_constraintTop_toBottomOf="@id/cvOrderHistory"
            tools:layout_editor_absoluteY="529dp">

            <TextView
                android:id="@+id/tvCards"
                style="@style/Headline6Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="@dimen/layout_space_24"
                android:text="@string/cards"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/layout_space_24"
                android:background="@null"
                android:contentDescription="@string/cards"
                android:src="@drawable/ic_chevron_left"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvNotifications"
            android:layout_width="0dp"
            android:layout_height="@dimen/cv_profile_action_height"
            android:layout_marginTop="@dimen/layout_space_24"
            app:cardCornerRadius="@dimen/corner_radius_20"
            app:cardElevation="@dimen/card_elevation_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/cvCards"
            app:layout_constraintRight_toRightOf="@id/cvCards"
            app:layout_constraintTop_toBottomOf="@id/cvCards">

            <TextView
                android:id="@+id/tvNotification"
                style="@style/Headline6Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="@dimen/layout_space_24"
                android:text="@string/notifications"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/layout_space_24"
                android:background="@null"
                android:contentDescription="@string/notifications"
                android:src="@drawable/ic_chevron_left"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_space_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvNotifications" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>